--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="#D8553A">
+    android:background="#D8553A"
+    app:layoutDescription="@xml/activity_main_scene"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rectangle_3_11" />
 
+
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="480dp"
@@ -29,8 +31,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rectangle_3" />
 
-
     <ImageView
+        android:id="@+id/imageView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -51,6 +53,7 @@
         app:srcCompat="@drawable/group_916" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -66,6 +69,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -77,14 +81,13 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="355dp"
-        android:layout_height="279dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="180dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/group_1719" />
-
 
 
     <ImageView
@@ -108,6 +111,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView12"
         android:layout_width="500dp"
         android:layout_height="155dp"
         android:layout_marginTop="10dp"
@@ -151,6 +155,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView13"
         android:layout_width="33dp"
         android:layout_height="33dp"
         android:layout_marginStart="50dp"
@@ -161,6 +166,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
@@ -171,6 +177,7 @@
 
 
     <ImageView
+        android:id="@+id/imageView15"
         android:layout_width="22dp"
         android:layout_height="19dp"
         android:layout_marginTop="212dp"
@@ -180,18 +187,20 @@
         app:srcCompat="@drawable/_09_fire_2" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="160dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Suhani Restaurant"
-        android:textSize="17sp"
+        android:text="@string/suhani_restaurant"
         android:textColor="@color/black"
+        android:textSize="17sp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -211,12 +220,13 @@
         android:layout_marginTop="216dp"
         android:layout_marginEnd="36dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="145 cal"
+        android:text="@string/_145_cal"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -229,6 +239,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
@@ -241,6 +252,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="257dp"
         android:layout_height="30dp"
         android:layout_marginStart="30dp"
@@ -254,18 +266,20 @@
 
 
     <TextView
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginTop="480dp"
         android:fontFamily="@font/roboto"
-        android:text="$100"
+        android:text="@string/_100"
         android:textColor="@color/orange"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <ImageView
+        android:id="@+id/imageView16"
         android:layout_width="22dp"
         android:layout_height="19dp"
         android:layout_marginTop="480dp"
@@ -275,6 +289,7 @@
         app:srcCompat="@drawable/_09_fire_2" />
 
     <TextView
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -287,6 +302,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <ImageView
+        android:id="@+id/imageView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="428dp"
@@ -296,6 +312,7 @@
         app:srcCompat="@drawable/group_1711" />
 
     <TextView
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -308,6 +325,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -320,6 +338,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <TextView
+        android:id="@+id/textView12"
         android:layout_width="257dp"
         android:layout_height="30dp"
         android:layout_marginStart="30dp"
@@ -344,4 +363,4 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
